--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "json-server": "^1.0.0-beta.3",
     "kanban": "file:",
     "next": "14.2.5",
     "react": "^18",
