--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "kanban": "file:",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.53.1"
   },
   "devDependencies": {
     "@types/node": "^20",
