--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lottiefiles/dotlottie-react": "^0.14.4",
     "crypto": "^1.0.1",
     "json-server": "^1.0.0-beta.3",
     "kanban": "file:",
